# tiny-js-webgpu

./: .gitignore  Cargo.toml  Makefile  README.md  cube.js  frag.wgsl  index.html  index.js  matrices.js  vert.wgsl  webgpu.js
src/: lib.rs  matrices.rs
